test/Fail/CopatternNonterminating.err
CopatternNonterminating.agda:16.1-18.38: error: [TerminationIssue]
Termination checking failed for the following function:
  illdefined
Problematic call:
  Stream.head illdefined
    (at CopatternNonterminating.agda:17.28-38)
